# grpc

./: CMakeLists.txt  README.md  pom.xml
.devcontainer/: Dockerfile  devcontainer.json
src/: pom.xml
src/cpp/: CMakeLists.txt
src/cpp/src/: async_client.cc  async_server.cc  client.cc  server.cc
src/flatbuffer/: CMakeLists.txt  messages.fbs  pom.xml
src/java/: dependency-reduced-pom.xml  pom.xml
src/java/src/main/java/: Client.java  Server.java
src/java/src/main/java/com/mattygiedt/grpc/: AsyncClient.java  BaseClient.java  BlockingClient.java  Client.java  ListenableFutureClient.java  RequestFactory.java  Server.java  ServiceEntry.java  StreamingCallback.java  UrnaryCallback.java
